--- a/simple-chat/src/index.css
+++ b/simple-chat/src/index.css
@@ -6,14 +6,18 @@
     --scrollbar-color: #ccc; /*Для скроллинга*/
 }
 
+html, body {
+    width: 100%;
+    height: 100vh;
+}
+
 body.chat-body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
     display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh;
+    width: 100%;
+    flex-direction: column;
     background-color: var(--background-color);
 }
 
@@ -26,15 +30,16 @@ body.chat-body {
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     display: flex;
     flex-direction: column;
-    height: 100vh;
 }
 
 
 .messages {
     list-style: none;
-    padding: 20px;
+    padding: 5px 20px;
+    flex: 1;
     height: calc(100vh - 70px);
     overflow-y: auto;
+    margin-bottom: 0;
     background-color: var(--secondary-color);
 }
 
@@ -52,12 +57,13 @@ body.chat-body {
     display: flex;
     width: 100%;
     background-color: var(--primary-color);
-    box-sizing: border-box;
+    /*box-sizing: border-box;*/
     padding: 10px;
+    height: fit-content;
 }
 
 .message-form textarea {
-    height: 5vh;
+    height: 100%;
     transition: height 0.2s ease;
     border-radius: 10px;
     flex-grow: 1;
@@ -67,7 +73,7 @@ body.chat-body {
     color: var(--secondary-color);
     box-sizing: border-box;
     margin-right: 10px;
-    overflow-y: hidden;
+    overflow-y: auto;
     max-height: 100px;
     resize: none;
     font-family: Arial, sans-serif;
@@ -93,6 +99,7 @@ body.chat-body {
     border: none;
     cursor: pointer;
     box-sizing: border-box;
+    /*min-height: 5vh;*/
 }
 
 .message-form button:hover {
@@ -103,6 +110,7 @@ body.chat-body {
     color: var(--secondary-color);
     width: fit-content;
     max-width: 70%;
+    min-width: 50px;
     word-break: break-word;
     text-align: left;
     border-radius: 20px;
@@ -120,10 +128,13 @@ body.chat-body {
     margin-right: auto;
 }
 
-@keyframes fadeIn {
+@keyframes fadeInWithBounce {
     from {
         opacity: 0;
         transform: translateY(20px);
+    }
+    50% {
+        transform: translateY(-10px);
     }
     to {
         opacity: 1;
@@ -132,8 +143,8 @@ body.chat-body {
 }
 
 .message {
+    animation: fadeInWithBounce 0.5s ease;
     transition: transform 0.5s;
-    animation: fadeIn 0.5s ease;
     position: relative;
     padding-bottom: 20px;
     display: flex;
@@ -147,9 +158,32 @@ body.chat-body {
     transform: scale(0);
 }
 
+.header {
+    display: flex;
+    width: 100%;
+    height: 50px;
+    flex-shrink: 0;
+}
+
+.main {
+    display: flex;
+    flex: 1;
+    width: 100%;
+    overflow-y: hidden;
+    flex-direction: column;
+}
+
+.footer {
+    display: flex;
+    flex-shrink: 0;
+    height: fit-content;
+    background-color: var(--secondary-color);
+}
+
 .partner-info {
     display: flex;
     align-items: center;
+    width: 100%;
     border-top-left-radius: 15px;
     border-top-right-radius: 15px;
     height: 5vh;
@@ -224,7 +258,7 @@ body.chat-body {
 
 .message:hover .delete-button {
     right: -27px;
-    display: block; /* Show the button on hover */
+    display: block;
 }
 
 .message .delete-button i.material-icons {
